<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@android:color/white"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <RelativeLayout
		android:id="@+id/layoutControls"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/phid_cyan_bg"
		android:paddingBottom="@dimen/phid_big_margin">

		<TextView
			android:id="@+id/header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/phid_label_type_code_from_sms"
			android:gravity="center_horizontal"
			android:layout_margin="@dimen/phid_big_margin"/>

		<TextView
			android:id="@+id/error_banner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/phid_error"
			android:gravity="center"
			android:layout_alignRight="@+id/layoutNumber"
			android:layout_above="@+id/layoutNumber"
			android:background="@drawable/phid_tooltip_right"
			android:drawableLeft="@drawable/phid_icon_alert"
			android:drawablePadding="@dimen/phid_padding_small"
			android:visibility="gone"
			/>

		<RelativeLayout
			android:id="@+id/layoutNumber"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/header">

			<ImageButton
				android:id="@+id/back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/phid_icon_arrow_left"
				android:layout_alignTop="@+id/ok"
				android:layout_alignBottom="@+id/ok"
				android:minWidth="90dp"
				style="@style/phid_Button.Left"/>

			<EditText
				android:id="@+id/code"
				android:hint="@string/phid_label_code"
				android:inputType="numberDecimal"
				android:digits="0123456789"
				android:imeOptions="actionDone"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@id/back"
				android:layout_alignTop="@id/ok"
				android:layout_alignBottom="@id/ok"
				android:layout_width="wrap_content"
				android:longClickable="false"
				android:minEms="7"
				android:maxLength="6"
				android:layout_height="wrap_content"
				style="@style/phid_EditText.Base"/>

			<Button
				android:text="@android:string/ok"
				android:id="@+id/ok"
				android:layout_toRightOf="@id/code"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="visible"
				style="@style/phid_Button.Right"/>

			<ProgressBar
				android:id="@+id/spinner"
				android:layout_toRightOf="@id/code"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:visibility="gone"
				android:indeterminateDrawable="@drawable/phid_progress_bg"
				android:layout_height="wrap_content"/>

			<ImageView
				android:id="@+id/status_icon"
				android:layout_toRightOf="@id/code"
				android:layout_width="wrap_content"
				android:layout_centerVertical="true"
				android:visibility="gone"
				android:src="@android:drawable/ic_notification_clear_all"
				android:layout_height="wrap_content"/>

		</RelativeLayout>
	</RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		tools:text="some sample text"
        android:layout_below="@+id/layoutControls"
        android:layout_margin="@dimen/phid_big_margin"
		style="@style/phid_Label.Small.Cyan"/>

    <TextView
        android:id="@+id/btnCallMeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/phid_btn_call_me_back"
		android:textStyle="bold"
		android:clickable="true"
        android:layout_below="@+id/message"
        android:layout_marginTop="@dimen/phid_big_margin"
		android:visibility="gone"
		style="@style/phid_Label.Medium.Cyan"/>


</RelativeLayout>
